increased article h3 spacing and fixed linkedin link

--- a/src/components/article/article.css
+++ b/src/components/article/article.css
@@ -50,6 +50,8 @@
     font-size: 20px;
     line-height: 30px;
     color: #FFFFFF;
+
+    margin-bottom: 1rem;
 }
 
 @media screen and (max-width: 550px) {
